# MasterCalculITA

./: .gitignore  CMakeLists.txt  README.md
src/: Button.cpp  Button.h  CMakeLists.txt  Display.cpp  Display.h  Interface.cpp  Interface.h  Interface.ui  Keyboard.cpp  Keyboard.h  cadastrodialog.cpp  cadastrodialog.h  cadastrodialog.ui  controller.cpp  controller.h  glwidget.cpp  glwidget.h  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  resources.qrc  widget.cpp  widget.h  write_resources_file.sh
src/resources/symbols/greek/: data.xml
